syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.ashenone.proto";

message Address {
  string street = 1;
  string city = 2;
  string state = 3;
  string postal_code = 4;
  string country = 5;
}

message User {
  int64 id = 1;
  string name = 2;
  string email = 3;
  int32 age = 4;
  string phone_number = 5;
  Address address = 6;
  repeated string preferences = 7;
}

service UserService {
  rpc GetUser(UserRequest) returns (User);
}

message UserRequest {
  string id = 1;
}
